--- a/diablo.html
+++ b/diablo.html
@@ -62,20 +62,18 @@
       width: 80vw;
     }
     .image-item {
-      border: 1px solid #aaa;
-      background-color: #f9f9f9;
+      width: 20vw; /* Adjusted size for better fit on smartphone screens */
+      height: 20vw; /* Adjusted size for better fit on smartphone screens */
       cursor: grab;
       text-align: center;
-      width: auto;
-      height: auto;
       display: flex;
       align-items: center;
       justify-content: center;
       box-sizing: border-box;
     }
     .image-item img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
       border: none;
     }
   </style>
@@ -133,11 +131,10 @@
   </div>
   
   <div class="draggable-items" id="draggable-items">
-    <div class="image-item" id="item1"><img src="https://i.ibb.co/SyF3YNq/Rogue.png" alt="Image 1"></div>
-    <div class="image-item" id="item2"><img src="https://i.ibb.co/6bssBQy/Necro.png" alt="Image 2"></div>
-    <div class="image-item" id="item3"><img src="https://i.ibb.co/9g8jPdb/SORC.png" alt="Image 3"></div>
-    <div class="image-item" id="item4"><img src="https://i.ibb.co/qMg3J75/Barb.png" alt="Image 4"></div>
-    <div class="image-item" id="item5"><img src="https://i.ibb.co/5xWrZxH/Druid.png" alt="Image 5"></div>
+    <div class="image-item" id="item1"><img src="https://via.placeholder.com/150" alt="Image 1"></div>
+    <div class="image-item" id="item2"><img src="https://via.placeholder.com/150" alt="Image 2"></div>
+    <div class="image-item" id="item3"><img src="https://via.placeholder.com/150" alt="Image 3"></div>
+    <div class="image-item" id="item4"><img src="https://via.placeholder.com/150" alt="Image 4"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
