--- a/diablo.html
+++ b/diablo.html
@@ -62,8 +62,8 @@
       width: 80vw;
     }
     .image-item {
-      width: 10vw; /* Adjusted size for better fit on smartphone screens */
-      height: 10vw; /* Adjusted size for better fit on smartphone screens */
+      width: 20vw; /* Adjusted size for better fit on smartphone screens */
+      height: 20vw; /* Adjusted size for better fit on smartphone screens */
       cursor: grab;
       text-align: center;
       display: flex;
@@ -75,6 +75,10 @@
       width: 100%;
       height: 100%;
       border: none;
+    }
+    .small {
+      width: 5vw;
+      height: 5vw;
     }
   </style>
 </head>
@@ -150,6 +154,7 @@
         animation: 150,
         onAdd: function (evt) {
           var itemEl = evt.item;
+          itemEl.classList.add('small');
           console.log('Item added to', zoneId, ':', itemEl.id);
         },
         onEnd: function (evt) {
