--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 10px;
-      width: 100vw;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      width: 90vw;
+      max-width: 1200px;
     }
     .tier-row {
       display: flex;
@@ -23,6 +32,10 @@
       margin-bottom: 10px;
       width: 100%;
       box-sizing: border-box;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      background-color: #fafafa;
     }
     .tier-label-wrapper {
       width: 10vw;
@@ -30,24 +43,25 @@
       align-items: center;
       justify-content: center;
       box-sizing: border-box;
+      margin-right: 10px;
     }
     .tier-label {
       max-width: 100%;
       max-height: 100%;
     }
     .drop-zone {
-      width: 60vw;
-      height: 10vw;
+      flex-grow: 1;
+      min-height: 10vw;
       border: 2px dashed #ddd;
       padding: 10px;
-      margin-left: 10px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 5px;
+      gap: 10px;
       align-items: center;
       background-color: #f0f0f0;
       overflow-y: auto;
+      border-radius: 5px;
     }
     .drop-zone img {
       max-width: 100%;
@@ -62,20 +76,43 @@
       width: 80vw;
     }
     .image-item {
-      border: 1px solid #aaa;
-      background-color: #f9f9f9;
+      width: 20vw; /* Adjusted size for better fit on smartphone screens */
+      height: 20vw; /* Adjusted size for better fit on smartphone screens */
       cursor: grab;
       text-align: center;
-      width: 30vw;
-      height: 30vw;
       display: flex;
       align-items: center;
       justify-content: center;
       box-sizing: border-box;
+      background-color: #ffffff;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
     .image-item img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 5px;
+    }
+    .small {
+      width: 5vw;
+      height: 5vw;
+    }
+    .save-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s ease;
+    }
+    .save-button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
@@ -132,11 +169,13 @@
   </div>
   
   <div class="draggable-items" id="draggable-items">
-    <div class="image-item" id="item1"><img src="https://via.placeholder.com/30" alt="Image 1"></div>
-    <div class="image-item" id="item2"><img src="https://via.placeholder.com/30" alt="Image 2"></div>
-    <div class="image-item" id="item3"><img src="https://via.placeholder.com/30" alt="Image 3"></div>
-    <div class="image-item" id="item4"><img src="https://via.placeholder.com/30" alt="Image 4"></div>
+    <div class="image-item" id="item1"><img src="https://via.placeholder.com/150" alt="Image 1"></div>
+    <div class="image-item" id="item2"><img src="https://via.placeholder.com/150" alt="Image 2"></div>
+    <div class="image-item" id="item3"><img src="https://via.placeholder.com/150" alt="Image 3"></div>
+    <div class="image-item" id="item4"><img src="https://via.placeholder.com/150" alt="Image 4"></div>
   </div>
+
+  <button class="save-button" onclick="saveTierList()">Save</button>
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
   <script>
@@ -151,7 +190,9 @@
         animation: 150,
         onAdd: function (evt) {
           var itemEl = evt.item;
+          itemEl.classList.add('small');
           console.log('Item added to', zoneId, ':', itemEl.id);
+          itemEl.removeAttribute('style'); // Remove inline styles added by Sortable.js
         },
         onEnd: function (evt) {
           var itemEl = evt.item;
@@ -170,11 +211,13 @@
       },
       animation: 150,
       sort: false,
+      onStart: function (evt) {
+        evt.clone.classList.add('being-dragged');
+      },
       onEnd: function (evt) {
-        var itemEl = evt.item;
-        var fromIndex = evt.oldIndex;
-        var toIndex = evt.newIndex;
-        console.log('Item moved from index', fromIndex, 'to', toIndex);
+        if (evt.from === draggableItems && evt.clone) {
+          evt.clone.remove(); // Remove the clone from the draggable items container
+        }
       },
     });
 
