--- a/diablo.html
+++ b/diablo.html
@@ -135,10 +135,11 @@
   </div>
   
   <div class="draggable-items" id="draggable-items">
-    <div class="image-item" id="item1"><img src="https://via.placeholder.com/150" alt="Image 1"></div>
-    <div class="image-item" id="item2"><img src="https://via.placeholder.com/150" alt="Image 2"></div>
-    <div class="image-item" id="item3"><img src="https://via.placeholder.com/150" alt="Image 3"></div>
-    <div class="image-item" id="item4"><img src="https://via.placeholder.com/150" alt="Image 4"></div>
+    <div class="image-item" id="item1"><img src="https://i.ibb.co/6bssBQy/Necro.png" alt="Image 1"></div>
+    <div class="image-item" id="item2"><img src="https://i.ibb.co/qMg3J75/Barb.png" alt="Image 2"></div>
+    <div class="image-item" id="item3"><img src="https://i.ibb.co/9g8jPdb/SORC.png" alt="Image 3"></div>
+    <div class="image-item" id="item4"><img src="https://i.ibb.co/SyF3YNq/Rogue.png" alt="Image 4"></div>
+    <div class="image-item" id="item5"><img src="https://i.ibb.co/5xWrZxH/Druid.png" alt="Image 5"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
