--- a/loadtierlist.html
+++ b/loadtierlist.html
@@ -150,7 +150,7 @@
   document.addEventListener('DOMContentLoaded', function () {
     var dropZones = ['tier-s', 'tier-a', 'tier-b', 'tier-c', 'tier-d', 'tier-e', 'tier-f'];
 
-    window.loadTierList = function (tierData) {
+    function loadTierList(tierData) {
       dropZones.forEach(function (zoneId) {
         var dropZone = document.getElementById(zoneId);
         var items = tierData[zoneId];
@@ -164,20 +164,22 @@
           });
         }
       });
-    };
+    }
 
-    // Example: Load tier list from saved data
-    var savedTierData = {
-      'tier-s': ['item1'],
-      'tier-a': ['item2'],
-      'tier-b': ['item3'],
-      'tier-c': ['item4'],
-      'tier-d': ['item5'],
-      'tier-e': [],
-      'tier-f': []
-    };
+    async function fetchTierData() {
+      try {
+        const response = await fetch('https://api.adalo.com/v0/apps/f1deecd5-c492-4c9f-b961-1b8358f07f9d/collections/t_0rusaj4khkgyth10nexxcpxqe');
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        const tierData = await response.json();
+        loadTierList(tierData);
+      } catch (error) {
+        console.error('Failed to fetch tier data:', error);
+      }
+    }
 
-    loadTierList(savedTierData);
+    fetchTierData();
   });
   </script>
 </body>
